# captcha-solvers

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  REFACTORING_ROADMAP.md  dangerfile.js
.devcontainer/: devcontainer.json
.factory/skills/release/: SKILL.md
.factory/skills/test/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: blank.yml  danger.yml  docs.yml  release.yml
docs/: adding-provider.md  architecture.md  architecture.mermaid
docs/tasks/: architecture-remediation-progress.md
examples/: basic_recaptcha_v2.rs  capmonster_provider.rs  cloudflare_challenge.rs  image_to_text.rs  recaptcha_v3.rs  rucaptcha_provider.rs  turnstile.rs  with_cancellation.rs  with_config.rs  with_proxy.rs  with_retry.rs
src/: client.rs  errors.rs  lib.rs  provider.rs  proxy.rs  response.rs  retry.rs  serde_helpers.rs  service.rs  solutions.rs  types.rs
src/providers/: mod.rs  traits.rs
src/providers/capmonster/: errors.rs  mod.rs  provider.rs  response.rs  tests.rs  types.rs
src/providers/capsolver/: client.rs  errors.rs  mod.rs  provider.rs  response.rs  tests.rs  types.rs
src/providers/retryable/: mod.rs
src/providers/rucaptcha/: client.rs  errors.rs  mod.rs  provider.rs  response.rs  tests.rs  types.rs
src/service/: config.rs  errors.rs  mod.rs  structure.rs  tests.rs  traits.rs
src/tasks/: cloudflare.rs  image_to_text.rs  mod.rs  recaptcha.rs  turnstile_challenge.rs  turnstile_waitroom.rs
src/utils/: error_chain.rs  mod.rs  proxy.rs  response.rs  retry.rs  serde_helpers.rs  span_status.rs
tests/: capmonster_integration.rs  capsolver_integration.rs  rucaptcha_integration.rs
tests/common/: mod.rs
