[package]
name = "captcha-solvers"
version = "0.1.4"
edition = "2024"
description = "Generic captcha solving library with provider abstraction"
license = "MIT"

[features]
default = ["capsolver", "rucaptcha", "tracing", "native-tls"]
capsolver = []
rucaptcha = []
# Enable tracing instrumentation
tracing = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]
# Enable OpenTelemetry metrics
metrics = ["dep:opentelemetry"]
# TLS backends (native-tls is default)
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "reqwest-middleware/rustls-tls"]

[dependencies]
# Core
tokio = { version = "1.44.1", features = ["time"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
url = { version = "2.5", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }

# Retry logic
backon = "1.5"

# Tracing (optional)
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.30", features = ["trace", "metrics"], optional = true }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full", "macros"] }
wiremock = "0.6"
dotenvy = "0.15"
